[gd_scene load_steps=5 format=3 uid="uid://bm6xell5h21fg"]

[ext_resource type="PackedScene" uid="uid://cjyuur1ra1ccx" path="res://ui/Overlays/HudOverlay/HudOverlay.tscn" id="1_ebaua"]
[ext_resource type="Script" path="res://ui/screen_ui.gd" id="1_h1vdp"]
[ext_resource type="PackedScene" uid="uid://ceq4m7qrfl8nv" path="res://ui/Overlays/windows/settings/settings.tscn" id="2_2qdce"]
[ext_resource type="PackedScene" uid="uid://sugg2fid7v5j" path="res://ui/main-menu/main-menu.tscn" id="4_qx4le"]

[node name="ScreenUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_h1vdp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Hud" parent="MarginContainer" instance=ExtResource("1_ebaua")]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="SettingsWindowPopup" type="Window" parent="Control"]
auto_translate_mode = 1
title = "Settings"
initial_position = 1
size = Vector2i(200, 200)
visible = false
popup_window = true

[node name="Settings" parent="Control/SettingsWindowPopup" instance=ExtResource("2_2qdce")]
unique_name_in_owner = true
offset_right = 0.0
offset_bottom = 0.0

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" parent="Control2" instance=ExtResource("4_qx4le")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="close_requested" from="Control/SettingsWindowPopup" to="." method="_on_settings_window_popup_close_requested"]
[connection signal="GameSettingsClicked" from="Control2/MainMenu" to="." method="_on_main_menu_game_settings_clicked"]
